2009-08-12  Richard Guenther  <rguenther@suse.de>
    
	PR rtl-optimization/41033
	* gcc.dg/pr41033.c: New test. 

2009-08-11  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/41022
	* gfortran.dg/proc_ptr_comp_14.f90: New.

2009-08-11  Adam Nemet  <anemet@caviumnetworks.com>

	* gcc.target/mips/ext-5.c: New test.
	* gcc.target/mips/ext-6.c: New test.
	* gcc.target/mips/ext-7.c: New test.
	* gcc.target/mips/ext-8.c: New test.
	* gcc.target/mips/extend-2.c: New test.

2009-08-10  Jason Merrill  <jason@redhat.com>

	* g++.dg/other/linkage2.C: New test for types-without-linkage
	handling.
	* g++.dg/ext/anon-struct4.C: No error about anonymous type.
	* g++.dg/lookup/anon2.C: Likewise.
	* g++.dg/other/anon3.C: Likewise.
	* g++.dg/template/arg2.C: Likewise.
	* g++.dg/template/local4.C: Likewise.
	* g++.old-deja/g++.law/operators32.C: Likewise.
	* g++.old-deja/g++.other/linkage2.C: Likewise.
	* g++.old-deja/g++.pt/enum6.C: Likewise.
	* g++.old-deja/g++.other/anon9.C: Use the undefined decls.
	* g++.old-deja/g++.other/linkage1.C: Likewise.

2009-08-10  Manuel López-Ibáñez  <manu@gcc.gnu.org>

       * gcc.dg/dg.exp: Test also c-c++-common dir.
       * g++.dg/dg.exp: Likewise.
       * g++.dg/warn/Wconversion-real.C: Delete.
       * gcc.dg/Wconversion-real.c: Move to ...
       * c-c++-common/Wconversion-real.c: ... here.
       * lib/target-supports.exp
       (check_effective_target_c,check_effective_target_c++): New.
	
2009-08-10  Daniel Kraft  <d@domob.eu>

	PR fortran/37425
	* gfortran.dg/typebound_operator_1.f03: New test.
	* gfortran.dg/typebound_operator_2.f03: New test.

2009-08-10  Richard Guenther  <rguenther@suse.de>

	PR middle-end/41006
	* gcc.c-torture/compile/pr41006-1.c: New testcase.
	* gcc.c-torture/compile/pr41006-2.c: Likewise.

2009-08-10  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/40940
	* gfortran.dg/class_1.f03: New.
	* gfortran.dg/class_2.f03: New.
	* gfortran.dg/proc_ptr_comp_pass_1.f90: Use CLASS instead of TYPE.